--- a/.github/workflows/deploy_demo_objects.yaml
+++ b/.github/workflows/deploy_demo_objects.yaml
@@ -1,12 +1,12 @@
+# GITHUB_WORKSPACE and SNOWFLAKE_ env vars must be set.  SnowCLI uses $SNOWFLAKE_PASSWORD
+# https://github.com/mdigian/sfguide-data-engineering-with-notebooks/settings/secrets/actions
 name: Deploy Demo Objects
 
-# Controls when the action will run. 
-on:
+on: 
   push:
     branches:
-      - main
-
-  # Allows you to run this workflow manually from the Actions tab
+      - main 
+      
   workflow_dispatch:
 
 jobs:
@@ -14,8 +14,8 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - name: Checkout repository
+
+      - name: Checkout repository  
         uses: actions/checkout@v4
 
       - name: Setup Python 3.10
@@ -24,22 +24,21 @@ jobs:
           python-version: '3.10'
 
       - name: Install Python packages
-        run: pip install -r requirements.txt
+        run:  pip install -r requirements.txt
 
-      # Make sure all 7 SNOWFLAKE_ environment variables are set
-      # SnowCLI accesses the passowrd directly from the SNOWFLAKE_PASSWORD environmnet variable
       - name: Deploy notebooks
         env:
-          SNOWFLAKE_ACCOUNT: ${{ secrets.SNOWFLAKE_ACCOUNT }}
-          SNOWFLAKE_USER: ${{ secrets.SNOWFLAKE_USER }}
-          SNOWFLAKE_PASSWORD: ${{ secrets.SNOWFLAKE_PASSWORD }}
-          SNOWFLAKE_ROLE: ${{ secrets.SNOWFLAKE_ROLE }}
+          SNOWFLAKE_ACCOUNT:   ${{ secrets.SNOWFLAKE_ACCOUNT   }}
+          SNOWFLAKE_USER:      ${{ secrets.SNOWFLAKE_USER      }}
+          SNOWFLAKE_PASSWORD:  ${{ secrets.SNOWFLAKE_PASSWORD  }}
+          SNOWFLAKE_ROLE:      ${{ secrets.SNOWFLAKE_ROLE      }}
           SNOWFLAKE_WAREHOUSE: ${{ secrets.SNOWFLAKE_WAREHOUSE }}
-          SNOWFLAKE_DATABASE: ${{ secrets.SNOWFLAKE_DATABASE }}
-          SNOWFLAKE_SCHEMA: ${{ secrets.SNOWFLAKE_SCHEMA }}
+          SNOWFLAKE_DATABASE:  ${{ secrets.SNOWFLAKE_DATABASE  }}
+          SNOWFLAKE_SCHEMA:    ${{ secrets.SNOWFLAKE_SCHEMA    }}
         run: |
-          snow sql -q "ALTER GIT REPOSITORY DEMO_GIT_REPO FETCH" --temporary-connection --account $SNOWFLAKE_ACCOUNT --user $SNOWFLAKE_USER --role $SNOWFLAKE_ROLE --warehouse $SNOWFLAKE_WAREHOUSE --database $SNOWFLAKE_DATABASE --schema $SNOWFLAKE_SCHEMA
+          snow sql -q "ALTER GIT REPOSITORY DEMO_GIT_REPO FETCH"                                                                                 --temporary-connection --account $SNOWFLAKE_ACCOUNT --user $SNOWFLAKE_USER --role $SNOWFLAKE_ROLE --warehouse $SNOWFLAKE_WAREHOUSE --database $SNOWFLAKE_DATABASE --schema $SNOWFLAKE_SCHEMA
           snow sql -q "EXECUTE IMMEDIATE FROM @DEMO_GIT_REPO/branches/main/scripts/deploy_notebooks.sql USING (env => 'PROD', branch => 'main')" --temporary-connection --account $SNOWFLAKE_ACCOUNT --user $SNOWFLAKE_USER --role $SNOWFLAKE_ROLE --warehouse $SNOWFLAKE_WAREHOUSE --database $SNOWFLAKE_DATABASE --schema $SNOWFLAKE_SCHEMA
 
-          : # Ideally both Snow CLI and the Python Connector could be configured entirely from env variables
-          : #python $GITHUB_WORKSPACE/scripts/deploy_task_dag.py DEMO_DB PROD_SCHEMA
+          : # Ideally Snow CLI and Python Connector are configured from env vars
+          
+          : # python $GITHUB_WORKSPACE/scripts/deploy_task_dag.py DEMO_DB PROD_SCHEMA
