change env var names are set to github repo secrets

--- a/.github/workflows/deploy_demo_objects.yaml
+++ b/.github/workflows/deploy_demo_objects.yaml
@@ -28,16 +28,16 @@ jobs:
 
       - name: Deploy notebooks
         env:
-          SNOWFLAKE_ACCOUNT:   ${{ secrets.SNOWFLAKE_ACCOUNT   }}
-          SNOWFLAKE_USER:      ${{ secrets.SNOWFLAKE_USER      }}
-          SNOWFLAKE_PASSWORD:  ${{ secrets.SNOWFLAKE_PASSWORD  }}
-          SNOWFLAKE_ROLE:      ${{ secrets.SNOWFLAKE_ROLE      }}
-          SNOWFLAKE_WAREHOUSE: ${{ secrets.SNOWFLAKE_WAREHOUSE }}
-          SNOWFLAKE_DATABASE:  ${{ secrets.SNOWFLAKE_DATABASE  }}
-          SNOWFLAKE_SCHEMA:    ${{ secrets.SNOWFLAKE_SCHEMA    }}
+          SF_ACCOUNT:   ${{ secrets.SNOWFLAKE_ACCOUNT   }}
+          SF_USER:      ${{ secrets.SNOWFLAKE_USER      }}
+          SF_PWD:       ${{ secrets.SNOWFLAKE_PASSWORD  }}
+          SF_ROLE:      ${{ secrets.SNOWFLAKE_ROLE      }}
+          SF_WH:        ${{ secrets.SNOWFLAKE_WAREHOUSE }}
+          SF_DB:        ${{ secrets.SNOWFLAKE_DATABASE  }}
+          SF_SCHEMA:    ${{ secrets.SNOWFLAKE_SCHEMA    }}
         run: |
-          snow sql -q "ALTER GIT REPOSITORY DEMO_GIT_REPO FETCH"                                                                                 --temporary-connection --account $SNOWFLAKE_ACCOUNT --user $SNOWFLAKE_USER --role $SNOWFLAKE_ROLE --warehouse $SNOWFLAKE_WAREHOUSE --database $SNOWFLAKE_DATABASE --schema $SNOWFLAKE_SCHEMA
-          snow sql -q "EXECUTE IMMEDIATE FROM @DEMO_GIT_REPO/branches/main/scripts/deploy_notebooks.sql USING (env => 'PROD', branch => 'main')" --temporary-connection --account $SNOWFLAKE_ACCOUNT --user $SNOWFLAKE_USER --role $SNOWFLAKE_ROLE --warehouse $SNOWFLAKE_WAREHOUSE --database $SNOWFLAKE_DATABASE --schema $SNOWFLAKE_SCHEMA
+          snow sql -q "ALTER GIT REPOSITORY DEMO_GIT_REPO FETCH"                                                                                 --temporary-connection --account $SF_ACCOUNT --user $SF_USER --role $SF_ROLE --warehouse $SF_WH --database $SF_DB --schema $SD_SCHEMA
+          snow sql -q "EXECUTE IMMEDIATE FROM @DEMO_GIT_REPO/branches/main/scripts/deploy_notebooks.sql USING (env => 'PROD', branch => 'main')" --temporary-connection --account $SF_ACCOUNT --user $SF_USER --role $SF_ROLE --warehouse $SF_WH --database $SF_DB --schema $SF_SCHEMA
 
           : # Ideally Snow CLI and Python Connector are configured from env vars
           
